# Parallel_computing

./: .gitignore  LICENSE
1_firsttry/: CMakeLists.txt  test.cu
2_devices/: CMakeLists.txt  test.cu
3_threadParallel/: CMakeLists.txt  MakeFile  Makefile  test.cu
4_blockParallel/: CMakeLists.txt  Makefile  test.cu
5_flowParallel/: CMakeLists.txt  Makefile  test.cu
6_threadsignal/: CMakeLists.txt  Makefile  test.cu
7_performance/: CMakeLists.txt  Makefile  performace.cu  test.cu
Dot/: Makefile  dot.cu
histogram/: CMakeLists.txt  Makefile  histogram.cu
julia/: Makefile  julia.cu
mutiGPU/: Makefile  mutigpu.cu
radix_sort/: Makefile  radixSort.cu
